# src/routes/v1/order/index.ts
@@ -1,6 +1,6 @@
 import express from "express";
 import passport from "passport";
-import { orderAmendmentHandler, orderListHandler, orderSubmitionHandler } from "./controllers.js";
+import { orderAmendmentHandler, orderCancelationHandler, orderListHandler, orderSubmitionHandler } from "./controllers.js";
 import { OrderCoordinatorProvider } from "../../../core/OrderCoordinatorProvider.js";
 import { schemaValidator } from "../schemaValidator.js";
 
@@ -12,6 +12,7 @@ export function orderRouter(orderCoordinatorProvider: OrderCoordinatorProvider)
 
     router.post("/submit", schemaValidator("/order/submit"), orderSubmitionHandler.bind(undefined, orderCoordinatorProvider));
     router.post("/amend", schemaValidator("/order/amend"), orderAmendmentHandler.bind(undefined, orderCoordinatorProvider));
+    router.post("/cancel", schemaValidator("/order/cancel"), orderCancelationHandler.bind(undefined, orderCoordinatorProvider));
     router.get("/list", orderListHandler.bind(undefined, orderCoordinatorProvider));
 
     return router;
